@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Implement a quest in Darcap, just to test stuff - no combat, just get items :)
+Nicolas Weeger 2010-01-17
+
 Low-level quest status handling.
 Nicolas Weeger 2010-01-17
 
